--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hoque_family_chores
-description: "A new Flutter project."
+description: "A Family Chores Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  firebase_core: ^3.13.0 # Check pub.dev for the latest version
+  firebase_auth: ^5.5.3 # Check pub.dev for the latest version
+  cloud_firestore: ^5.6.7 # Check pub.dev for the latest version
+  # Add other Firebase packages as needed, e.g., firebase_storage, firebase_messaging
 
 dev_dependencies:
   flutter_test:
