--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,14 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  errors:
+    # Don't treat warnings as errors
+    missing_return: ignore  
+    dead_code: warning
+    unused_local_variable: warning
+    deprecated_member_use: info
+    
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -23,6 +31,11 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    sort_child_properties_last: false
+    use_super_parameters: false
+    unnecessary_to_list_in_spreads: false
+    avoid_print: false  # Allow print statements for debugging
+    dangling_library_doc_comments: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
