--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.1.5 # Check for the latest version on pub.dev
   change_app_package_name: ^1.5.0
   flutter_dotenv: ^5.2.1 # Check for latest version
+  uuid: ^4.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
