--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   flutter_dotenv: ^5.2.1 # Check for latest version
   uuid: ^4.5.1
+  logger: ^2.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
