--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,11 @@ dependencies:
   image_picker: ^1.1.2 # For camera access
   flutter_image_compress: ^2.3.0 # For image compression
   permission_handler: ^11.3.1 # For camera permission handling
-  # Add other Firebase packages as needed, e.g., firebase_storage, firebase_messaging
+  firebase_messaging: ^15.2.0 # For push notifications
+  flutter_local_notifications: ^16.3.0 # For local notifications
+  timezone: ^0.9.4 # For scheduled notifications
+  app_settings: ^5.2.0 # For app settings
+  cached_network_image: ^3.3.1 # For image caching
 
 
 dev_dependencies:
